--- a/index.html
+++ b/index.html
@@ -3,8 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <!-- font awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    />
+    <!-- css link -->
+    <link rel="stylesheet" href="./style.css" />
     <title>Creative Design</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <!-- section 1 -->
+      <section class="section__1">
+        <nav class="navbar">
+          <a href="#" class="navbar__link">Design</a>
+          <a href="#" class="navbar__link">Customers</a>
+          <a href="#" class="navbar__link">Team</a>
+          <a href="#" class="navbar__link">Contact</a>
+        </nav>
+        <div class="floating-bg"></div>
+        <h1 class="section__1--heading">Creative Design</h1>
+        <div class="logo">
+          <i class="fas fa-bezier-curve"></i>
+        </div>
+      </section>
+      <!--  -->
+    </div>
+    <script src="./script.js"></script>
+  </body>
 </html>
