--- a/index.html
+++ b/index.html
@@ -28,7 +28,69 @@
           <i class="fas fa-bezier-curve"></i>
         </div>
       </section>
-      <!--  -->
+      <!-- section 2 -->
+      <section class="section__2">
+        <h1 class="section__heading">Customers</h1>
+        <div class="customers__container">
+          <!-- customer -->
+          <div class="customer">
+            <i class="fas fa-quote-left"></i>
+            <p class="customer__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Aspernatur nihil minima, atque enim consequuntur voluptatibus
+              laudantium neque hic harum! Repellendus quibusdam modi suscipit
+              obcaecati veritatis.
+            </p>
+            <div class="customer__rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-stroke"></i>
+            </div>
+            <img src="./images/customer-img-1.jpg" alt="customer" />
+            <h4 class="customer__name">Jane Lee</h4>
+          </div>
+          <!-- customer -->
+          <div class="customer">
+            <i class="fas fa-quote-left"></i>
+            <p class="customer__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Aspernatur nihil minima, atque enim consequuntur voluptatibus
+              laudantium neque hic harum! Repellendus quibusdam modi suscipit
+              obcaecati veritatis.
+            </p>
+            <div class="customer__rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <img src="./images/customer-img-2.jpg" alt="customer" />
+            <h4 class="customer__name">Bob Smith</h4>
+          </div>
+          <!-- customer -->
+          <div class="customer">
+            <i class="fas fa-quote-left"></i>
+            <p class="customer__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Aspernatur nihil minima, atque enim consequuntur voluptatibus
+              laudantium neque hic harum! Repellendus quibusdam modi suscipit
+              obcaecati veritatis.
+            </p>
+            <div class="customer__rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <img src="./images/customer-img-3.jpg" alt="customer" />
+            <h4 class="customer__name">Ann Brow</h4>
+          </div>
+        </div>
+      </section>
     </div>
     <script src="./script.js"></script>
   </body>
