--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <!-- section 2 -->
       <section class="section__2">
         <h1 class="section__heading">Customers</h1>
-        <div class="customers__container">
+        <div class="customers">
           <!-- customer -->
           <div class="customer">
             <i class="fas fa-quote-left"></i>
@@ -88,6 +88,99 @@
             </div>
             <img src="./images/customer-img-3.jpg" alt="customer" />
             <h4 class="customer__name">Ann Brow</h4>
+          </div>
+        </div>
+      </section>
+      <!-- section 3 -->
+      <section class="section__3">
+        <h1 class="section__heading">Team</h1>
+        <div class="team">
+          <!-- member -->
+          <div class="team__member">
+            <img src="./images/team-member-1.jpg" alt="" />
+            <h2 class="team__member--name">
+              Nick Smith <span>(Designer)</span>
+            </h2>
+            <ul class="team__member--skills">
+              <li>Ps</li>
+              <li>Figma</li>
+              <li>HTML5</li>
+              <li>CSS3</li>
+              <li>Ai</li>
+            </ul>
+            <a href="#" class="team__member--projects">Projects</a>
+            <div class="team__member--story-btn" title="My Story">
+              <div class="team__member--story-btn__line"></div>
+            </div>
+            <div class="story">
+              <h4 class="story__title">About Me</h4>
+              <p class="story__para">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque
+                voluptatem deserunt reprehenderit, architecto labore facilis
+                consectetur ullam, id quod ipsam repudiandae ab odio molestiae?
+                Molestiae pariatur impedit labore doloremque eveniet, totam,
+                suscipit perferendis et ratione dolor dolorem, quod voluptatum
+                minus.
+              </p>
+            </div>
+          </div>
+          <!-- member -->
+          <div class="team__member">
+            <img src="./images/team-member-2.jpg" alt="" />
+            <h2 class="team__member--name">
+              Bob Brown <span>(Designer)</span>
+            </h2>
+            <ul class="team__member--skills">
+              <li>Ae</li>
+              <li>Pr</li>
+              <li>HTML5</li>
+              <li>CSS3</li>
+              <li>Inkscape</li>
+            </ul>
+            <a href="#" class="team__member--projects">Projects</a>
+            <div class="team__member--story-btn" title="My Story">
+              <div class="team__member--story-btn__line"></div>
+            </div>
+            <div class="story">
+              <h4 class="story__title">About Me</h4>
+              <p class="story__para">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque
+                voluptatem deserunt reprehenderit, architecto labore facilis
+                consectetur ullam, id quod ipsam repudiandae ab odio molestiae?
+                Molestiae pariatur impedit labore doloremque eveniet, totam,
+                suscipit perferendis et ratione dolor dolorem, quod voluptatum
+                minus.
+              </p>
+            </div>
+          </div>
+          <!-- member -->
+          <div class="team__member">
+            <img src="./images/team-member-3.jpg" alt="" />
+            <h2 class="team__member--name">
+              John Doe <span>(Developer)</span>
+            </h2>
+            <ul class="team__member--skills">
+              <li>Javascript</li>
+              <li>ReactJS</li>
+              <li>NodeJS</li>
+              <li>MongoDB</li>
+              <li>Python</li>
+            </ul>
+            <a href="#" class="team__member--projects">Projects</a>
+            <div class="team__member--story-btn" title="My Story">
+              <div class="team__member--story-btn__line"></div>
+            </div>
+            <div class="story">
+              <h4 class="story__title">About Me</h4>
+              <p class="story__para">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque
+                voluptatem deserunt reprehenderit, architecto labore facilis
+                consectetur ullam, id quod ipsam repudiandae ab odio molestiae?
+                Molestiae pariatur impedit labore doloremque eveniet, totam,
+                suscipit perferendis et ratione dolor dolorem, quod voluptatum
+                minus.
+              </p>
+            </div>
           </div>
         </div>
       </section>
