--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <i class="fas fa-bezier-curve"></i>
         </div>
       </section>
-      <!-- section 2 -->
+      <!-- section 2 customers-->
       <section class="section__2">
         <h1 class="section__heading">Customers</h1>
         <div class="customers">
@@ -91,7 +91,7 @@
           </div>
         </div>
       </section>
-      <!-- section 3 -->
+      <!-- section 3 team-->
       <section class="section__3">
         <h1 class="section__heading">Team</h1>
         <div class="team">
@@ -183,6 +183,20 @@
             </div>
           </div>
         </div>
+      </section>
+      <!-- section 4 contact and footer-->
+      <section class="section__4">
+        <h1 class="section__heading">Contact</h1>
+        <div class="form__container">
+          <img src="./images/form-img.png" alt="" />
+          <form action="" class="form__container--contact-form">
+            <input type="text" placeholder="Your Name" />
+            <input type="email" placeholder="Your Email" />
+            <textarea name="" id="" placeholder="Your Message"></textarea>
+            <input type="submit" value="Send" />
+          </form>
+        </div>
+        <p class="copyright">Copyright &copy; CaC All Rights Reserved</p>
       </section>
     </div>
     <script src="./script.js"></script>
